# enigo

./: Cargo.toml
src/: lib.rs  linux.rs
src/macos/: macos_impl.rs
src/win/: win_impl.rs
